# mesh_analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  analyzer_8cpp.html  annotated.html  basic__shapes_8h_source.html  classDelaunay-members.html  classDelaunay.html  classMesh-members.html  classMesh.html  classes.html  classtinyobj_1_1MaterialFileReader-members.html  classtinyobj_1_1MaterialFileReader.html  classtinyobj_1_1MaterialReader-members.html  classtinyobj_1_1MaterialReader.html  classtinyobj_1_1MaterialStreamReader-members.html  classtinyobj_1_1MaterialStreamReader.html  classtinyobj_1_1ObjReader-members.html  classtinyobj_1_1ObjReader.html  demo__analyzer3D_8cpp.html  dir_405fd32de3649961a5f009c7a3fe84df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_768c1d36e5bc1a4e6777d60a62cdc56d.html  dir_7be0d8c199b9408ae01f5d77515b8def.html  dir_8d7e0b28499b72c842cf2c1318866710.html  dir_913bfe5cd49c15c10de83786c9f7c5a0.html  dir_9c0bba59e2257c2f3fc54cb6fcb94bf0.html  dir_a00b633439466cbb1729245c7f66f564.html  dir_b00de47ad7e2e13a637d9aa605dec95e.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_c2a75c563fc6433729f73d7c87bb5e6d.html  dir_c60f5c854645a487cb9547c3a2043b53.html  dir_cac21311fa223bf4e936802c78bf215f.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_decac6bb6701203b5d911dffc686847a.html  doxygen_crawl.html  edge_8h_source.html  exportToVTK_8h_source.html  (+75 more)
.github/workflows/: doxygen.yml
demos/: analyzer.cpp  demo_analyzer.cpp  demo_analyzer3D.cpp  demo_smoothing.cpp  demo_triangulation.cpp  smoothing.cpp  triangulation.cpp
include/: analysis.h  exportToVTK.h  mesh.h  point.h  smoothing.h
include/Enmesh/: Enmesh.h
include/geometry/: edge.h  mesh.h  point.h  tetrahedron.h  triangle.h
include/io/: exportToVTK.h  loadMsh.h  loadObj.h  load_msh.h
include/mesh/: mesh.h  mesh_analysis.h  mesh_basic_shapes.h  mesh_refine.h  mesh_smoothing.h  mesh_triangulation.h
include/mesh_generation/: basic_shapes.h  triangulation.h
include/processing/: basic_shapes.h  triangulation.h
models/: sphere.msh
scripts/: run_analyzer3D.sh  run_triangulation.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  (+26 more)
src/: analysis.cpp  main.cpp  mesh.cpp  mesh_exportToVTK.cpp  point.cpp  smoothing.cpp
src/geometry/: mesh.cpp  point.cpp  triangle.cpp
src/io/: exportToVTK.cpp  loadMsh.cpp  loadMsh.tpp  loadObj.cpp
src/mesh/: mesh.cpp  mesh_analysis.cpp  mesh_analysis.tpp  mesh_basic_shapes.cpp  mesh_refine.cpp  mesh_smoothing.cpp  mesh_triangulation.cpp
(+6 files in other folders)
